--- a/main.css
+++ b/main.css
@@ -80,7 +80,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(/images/background.svg);
+    background-image: url(images/background.svg);
     background-repeat: no-repeat;
     background-size: cover;
 }
